tests/fsharp/typecheck/sigs/neg98.bsl

neg98.fs(10,20,10,34): typecheck error FS0768: The member 'Eval' does not accept the correct number of arguments. 2 argument(s) are expected, but 2 were given. The required signature is 'Evaluator.Eval: ('t -> 'u) -> 'u list -> 'ret'.

neg98.fs(10,23,10,27): typecheck error FS0017: The member 'Eval: 'a * 'b -> 'c' does not have the correct type to override the corresponding abstract method. The required signature is 'Eval<'u> : ('t -> 'u) -> 'u list -> 'a'.

neg98.fs(10,23,10,27): typecheck error FS0367: The member 'Eval: 'a * 'b -> 'c' does not have the correct number of arguments. The required signature is 'Eval<'u> : ('t -> 'u) -> 'u list -> 'a'.

neg98.fs(9,22,9,36): typecheck error FS0783: At least one override did not correctly implement its corresponding abstract member
